Fix: card title nowrap

--- a/css/Components/img-cards.css
+++ b/css/Components/img-cards.css
@@ -69,6 +69,7 @@
 
 .activity-title {
   padding: 16px;
+  white-space: nowrap;
 }
 
 /* Tablet */
